[project]
name = "epot-test"
description = "aaa"
readme = {text = "Hello"}
requires-python = ">=3.7"
authors = [{name = "Conchylicultor", email="etils@google.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
]
# No default dependencies (submodules deps are optional and should be
# installed individually)
dependencies = []

# This is set automatically by flit using `etils.__version__`
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"